Changed images name

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 </ul>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
-                    <li><img src="./images/what we do 1.jpg" alt="Человек печатает на клавиатуре" width="370" height="294"></li>
-                    <li><img src="./images/what we do 2.jpg" alt="Человек держит в руке телефон перед экраном ноутбука" width="370" height="294"></li>
-                    <li><img src="./images/what we do 3.jpg" alt="Человек работает с планшетом" width="370" height="294"></li>
+                    <li><img src="./images/about1.jpg" alt="Человек печатает на клавиатуре" width="370" height="294"></li>
+                    <li><img src="./images/about2.jpg" alt="Человек держит в руке телефон перед экраном ноутбука" width="370" height="294"></li>
+                    <li><img src="./images/about3.jpg" alt="Человек работает с планшетом" width="370" height="294"></li>
                 </ul>
               </section>
               <section>
@@ -57,15 +57,15 @@
                         <b>Игорь Демьяненко</b>
                         <p>Product Designer</p>
                       </li>
-                      <li><img src="./images/team member 2.jpg" alt="Фотография специалиста студии" width="270" height="260">
+                      <li><img src="./images/teammember2.jpg" alt="Фотография специалиста студии" width="270" height="260">
                         <b>Ольга Репина</b>
                         <p>Frontend Developer</p>
                       </li>
-                      <li><img src="./images/team member 3.jpg" alt="Фотография специалиста студи" width="270" height="260">
+                      <li><img src="./images/teammember3.jpg" alt="Фотография специалиста студи" width="270" height="260">
                         <b>Николай Тарасов</b>
                         <p>Marketing</p>
                       </li>
-                      <li><img src="./images/team member 4.jpg" alt="Фотография специалиста студи" width="270" height="260">
+                      <li><img src="./images/teammember4.jpg" alt="Фотография специалиста студи" width="270" height="260">
                         <b>Михаил Ермаков</b>
                         <p>UI Designer</p>
                       </li>
