--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
-        <nav>
+          <nav>
+            <a href="">WebStudio</a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-         </header>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
          <main>
              <section class="hero">
                 <h1>Эффективные решения для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
              </section>
              <section>
+                 <h2 class="hidden">О нас</h2>
                 <ul>
                     <li>
                         <h3>Внимание к деталям</h3>
@@ -43,30 +46,32 @@
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
+                </section>
+                <section>
                 <h2>Чем мы занимаемся</h2>
                 <ul>
                     <li><img src="./images/about1.jpg" alt="Человек печатает на клавиатуре" width="370" height="294"></li>
                     <li><img src="./images/about2.jpg" alt="Человек держит в руке телефон перед экраном ноутбука" width="370" height="294"></li>
                     <li><img src="./images/about3.jpg" alt="Человек работает с планшетом" width="370" height="294"></li>
                 </ul>
-              </section>
+               </section>
               <section>
                   <h2>Наша команда</h2>
                   <ul>
                       <li><img src="./images/teammember1.jpg" alt="Фотография специалиста студии" width="270" height="260">
-                        <b>Игорь Демьяненко</b>
+                        <h3>Игорь Демьяненко</h3>
                         <p>Product Designer</p>
                       </li>
                       <li><img src="./images/teammember2.jpg" alt="Фотография специалиста студии" width="270" height="260">
-                        <b>Ольга Репина</b>
+                        <h3>Ольга Репина</h3>
                         <p>Frontend Developer</p>
                       </li>
                       <li><img src="./images/teammember3.jpg" alt="Фотография специалиста студи" width="270" height="260">
-                        <b>Николай Тарасов</b>
+                        <h3>Николай Тарасов</h3>
                         <p>Marketing</p>
                       </li>
                       <li><img src="./images/teammember4.jpg" alt="Фотография специалиста студи" width="270" height="260">
-                        <b>Михаил Ермаков</b>
+                        <h3>Михаил Ермаков</h3>
                         <p>UI Designer</p>
                       </li>
                   </ul>
