--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <button type="button">Заказать услугу</button>
              </section>
              <section>
-                 <h2 class="hidden">О нас</h2>
+                 <h2 class="hidden-title">Особенности</h2>
                 <ul>
                     <li>
                         <h3>Внимание к деталям</h3>
